Fix: 모달 z-index 수정

--- a/src/components/modal/index.scss
+++ b/src/components/modal/index.scss
@@ -6,6 +6,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba($primary-color, .7);
+  z-index: 2;
 }
 
 .modal,
@@ -19,6 +20,7 @@
   height: 70vh;
   border-radius: 1em;
   box-shadow: 0px 0px 15px rgba($secondary-color, .5);
+  z-index: 2;
 }
 
 .modal {
