--- a/src/pages/main/menu-modal/index.scss
+++ b/src/pages/main/menu-modal/index.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: calc(100vh - $header-size);
   background-color: rgba($primary-color, .7);
+  z-index: 1;
 }
 
 .menu-modal {
@@ -19,6 +20,7 @@
   box-shadow: 0px 0px 15px rgba($secondary-color, .5);
   display: flex;
   flex-direction: column;
+  z-index: 1;
 
   .menu-container {
     @include fade-in(.5s);
